--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block content %}
 
-<section id="bg" style="background-image: url('static/images/spa-1.jpg')";> >
+<section id="bg" style="background-image: url('static/images/about.jpg')";> >
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters">
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="about text-center px-2 px-lg-5">
 			     <div class="col-md-3 ftco-animate">
-				<a href="static/images/about.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/about.jpg);">
+				<a href="static/images/galler-6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/about.jpg);">
 				</a>
 			</div>
 					<div class="text mt-4">
