--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/gallery-2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/massage.jpg');" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
