--- a/mysite/templates/mysite/services.html
+++ b/mysite/templates/mysite/services.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% include 'mysite/navbar.html' %}
 {% block content %}
-<body class="hero-wrap js-fullheight" style="background-image: url('static/images/bg-1.jpg');" data-stellar-background-ratio="0.5">>
+<body class="hero-wrap js-fullheight" style="background-image: url('static/images/bg_1.jpg');" data-stellar-background-ratio="0.5">>
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
 	<div class="container">
 		<div class="row no-gutters">
 			<div class="col-md-4 d-flex align-items-stretch">
-				<div class="offer-deal text-center px-2 px-lg-5">
-					<div class="img" style="background-image:url('static/images/bg-1.jpg');" data-stellar-background-ratio="0.5"></div>
+				<div class="hair-care text-center px-2 px-lg-5">
+					<div class="img" style="background-image:url('static/images/gallery-3.jpg');" data-stellar-background-ratio="0.5"></div>
 					<div class="text mt-4">
 						<h3 class="mb-4">Hair care</h3>
 						<p class="mb-5">let us braid, color and style your hair to your liking</p>
@@ -17,8 +17,8 @@
 				</div>
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
-				<div class="offer-deal active text-center px-2 px-lg-5">
-					<div class="img" style="background-image: url(images/offer-deal-2.jpg);"></div>
+				<div class="Nail-care active text-center px-2 px-lg-5">
+					<div class="img" style="background-image: url('static/images/mani_1.jpg');"></div>
 					<div class="text mt-4">
 						<h3 class="mb-4">Nail care</h3>
 						<p class="mb-5">Acrylic Nails, Spa Pedicure, Manicure, Polish, U.V & Powder Gel and Dip Powder</p>
@@ -27,8 +27,8 @@
 				</div>
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
-				<div class="offer-deal text-center px-2 px-lg-5">
-					<div class="img" style="background-image: url(images/offer-deal-3.jpg);"></div>
+				<div class="waxing text-center px-2 px-lg-5">
+					<div class="img" style="background-image: url('static/images/spa.jpg');"></div>
 					<div class="text mt-4">
 						<h3 class="mb-4">waxing</h3>
 						<p class="mb-5">Brazilian, legs, arms, eyebrows, under arms, Bikini, Back Wax and full face</p>
@@ -44,7 +44,8 @@
     <div class="container-fluid px-md-5">
     	<div class="row">
     		<div class="col-md-6 col-lg-3">
-				<div class="services text-center ftco-animate">
+				<div class="makeup text-center ftco-animate">
+					<div class="img" style="background-image: url('static/images/makeup.jpg');"></div>
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-candle"></span></div>
 					<div class="text mt-3">
 						<h3>makeup</h3>
@@ -54,6 +55,7 @@
 			</div>
 			<div class="col-md-6 col-lg-3">
 				<div class="services text-center ftco-animate">
+					<div class="img" style="background-image: url('static/images/makeup_4.jpg');"></div>
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-beauty-treatment"></span></div>
 					<div class="text mt-3">
 						<h3>Skin Care</h3>
@@ -63,6 +65,7 @@
 			</div>
 			<div class="col-md-6 col-lg-3">
 				<div class="services text-center ftco-animate">
+					<div class="img" style="background-image: url('static/images/spa-2.jpg');"></div>
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-relax"></span></div>
 					<div class="text mt-3">
 						<h3>Body Massages</h3>
@@ -84,22 +87,22 @@
         </div>
     	<div class="row">
 			<div class="col-md-3 ftco-animate">
-				<a href="statimages/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(staticimages/gallery-1.jpg);">
+				<a href="statimages/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/spa-3.jpg');">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+				<a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/spa-4.jpg');">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+				<a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/hair_2.jpg');">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
+				<a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/makeup-creative.jpg');">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
 				</a>
 			</div>
