--- a/mysite/templates/mysite/navbar.html
+++ b/mysite/templates/mysite/navbar.html
@@ -8,10 +8,10 @@
       </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-link"><a href=" /" class="nav-link">Home</a></li>
-            <li class="nav-link"><a href="about/" class="nav-link">About</a></li>
-            <li class="nav-link"><a href="services/" class="nav-link">Services</a></li>
-            <li class="nav-link"><a href="contactus/" class="nav-link">Contact</a></li>
+            <li class="nav-link"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
+            <li class="nav-link"><a href="{% url 'about' %}" class="nav-link">About</a></li>
+            <li class="nav-link"><a href="{% url 'services' %}" class="nav-link">Services</a></li>
+            <li class="nav-link"><a href="{% url 'contact-us' %}" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
