--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -10,11 +10,10 @@
 				<div class="about text-center px-2 px-lg-5">
 			     <div class="col-md-3 ftco-animate">
 			</div>
-			<img src="{% static 'images/spa-1.jpg' %}">
 					<div class="text mt-4">
 						<h3 class="mb-4"><b>EXPLORE YOUR NATURAL ESCENCE</b></h3>
-						<p class="mb-5">
-At CHRISTYS we have come a long way in ensuring that all our clients get value for money and great service while at it.I personally took the lead with ensuring that our staff fully understand the core values at Christy… Values such as excellence in their work, kindness, warmth, team work just to name a few. When I was going through that special process of coming up with a brand, I envisioned a salon that felt like home; from the decor to the client care I wanted that to be our truth…</p>
+
+						<p class="mb-5"><img src="{% static 'images/makeup_3.jpg' %}" style="float: right;">At CHRISTYS we have come a long way in ensuring that all our clients get value for money and great service while at it.I personally took the lead with ensuring that our staff fully understand the core values at Christy… Values such as excellence in their work, kindness, warmth, team work just to name a few. When I was going through that special process of coming up with a brand, I envisioned a salon that felt like home; from the decor to the client care I wanted that to be our truth…</p>
 					</div>
 				</div>
 			</div>
