--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -1,26 +1,27 @@
 {% extends 'mysite/main.html' %}
 {% load static %}
 {% block content %}
-
-<section>
-	<div class="overlay"></div>
+<br>
+<br>
+<body class="hero-wrap js-fullheight" style="background-image: url('static/images/gallery-4.jpg');" data-stellar-background-ratio="0.5">
+<section >
 	<div class="container">
-		<div class="row no-gutters">
-			<div class="col-md-4 d-flex align-items-stretch">
-				<div class="about text-center px-2 px-lg-5">
-			     <div class="col-md-3 ftco-animate">
+		<div class="col-md-6 ">
+          	<div class="image">
+				<img src="{% static 'images/makeup_3.jpg' %}" width="280" height="420"
+				style="float: right; 
+				margin-left: 10px;
+				margin-top: 10px; ">
 			</div>
-					<div class="text mt-4">
-						<h3 class="mb-4"><b>EXPLORE YOUR NATURAL ESCENCE</b></h3>
-
-						<p class="mb-5"><img src="{% static 'images/makeup_3.jpg' %}" style="float: right;">At CHRISTYS we have come a long way in ensuring that all our clients get value for money and great service while at it.I personally took the lead with ensuring that our staff fully understand the core values at Christy… Values such as excellence in their work, kindness, warmth, team work just to name a few. When I was going through that special process of coming up with a brand, I envisioned a salon that felt like home; from the decor to the client care I wanted that to be our truth…</p>
-					</div>
+			<div class="text mt-4">
+				<div class="col-md-6">
+				<h3 class="mb-4"><b>EXPLORE YOUR NATURAL ESCENCE</b></h3>
+				<p class="mb-5">At CHRISTYS we have come a long way in ensuring that all our clients get value for money and great service while at it.I personally took the lead with ensuring that our staff fully understand the core values at Christy… Values such as excellence in their work, kindness, warmth, team work just to name a few. When I was going through that special process of coming up with a brand, I envisioned a salon that felt like home; from the decor to the client care I wanted that to be our truth…</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-    
 
 <section class="ftco-gallery ftco-section">
 	<div class="container">
@@ -32,10 +33,17 @@
         </div>
         <div class="row">
 			<div class="col-md-4 col-x5-6">
-					<img src="{% static 'images/spa-1.jpg' %}" class="img-responsive">
+				<img src="{% static 'images/spa-1.jpg' %}" width="240" height="240">
+			</div>
+			<div class="col-md-4 col-x5-6">
+				<img src="{% static 'makeup.jpg' %}" width="240" height="240">
+			</div>
+			<div class="col-md-4 col-x5-6">
+				<img src="{% static 'makeup-creative.jpg' %}" width="240" height="240">
 			</div>
 		</div>
     </div>
 </section>
-
+</body>
 {% endblock %}
+					<img src="{% static 'images/spa-1.jpg' %}" class="img-responsive">
