--- a/mysite/templates/mysite/services.html
+++ b/mysite/templates/mysite/services.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% include 'mysite/navbar.html' %}
 {% block content %}
-<body class="hero-wrap js-fullheight" style="background-image: url('static/images/bg_1.jpg');" data-stellar-background-ratio="0.5">>
+<body class="hero-wrap js-fullheight" style="background-image: url('static/images/gallery-4.jpg');" data-stellar-background-ratio="0.5">
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
 	<div class="container">
 		<div class="row no-gutters">
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="hair-care text-center px-2 px-lg-5">
-					<div class="img" style="background-image:url('static/images/gallery-3.jpg');" data-stellar-background-ratio="0.5"></div>
+					<img src="{% static 'images/hair care.jpg' %}" width="240" height="240">
 					<div class="text mt-4">
 						<h3 class="mb-4">Hair care</h3>
 						<p class="mb-5">let us braid, color and style your hair to your liking</p>
@@ -18,7 +18,7 @@
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="Nail-care active text-center px-2 px-lg-5">
-					<div class="img" style="background-image: url('static/images/mani_1.jpg');"></div>
+					<img src="{% static 'images/mani_1.jpg' %}" width="240" height="240">
 					<div class="text mt-4">
 						<h3 class="mb-4">Nail care</h3>
 						<p class="mb-5">Acrylic Nails, Spa Pedicure, Manicure, Polish, U.V & Powder Gel and Dip Powder</p>
@@ -28,7 +28,7 @@
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="waxing text-center px-2 px-lg-5">
-					<div class="img" style="background-image: url('static/images/spa.jpg');"></div>
+					<img src="{% static 'images/waxing2.jpg' %}" width="240" height="240">
 					<div class="text mt-4">
 						<h3 class="mb-4">waxing</h3>
 						<p class="mb-5">Brazilian, legs, arms, eyebrows, under arms, Bikini, Back Wax and full face</p>
@@ -43,9 +43,9 @@
 <section class="ftco-section ftco-section-services bg-light">
     <div class="container-fluid px-md-5">
     	<div class="row">
-    		<div class="col-md-6 col-lg-3">
+    		<div class="col-md-4 d-flex align-items-stretch">
 				<div class="makeup text-center ftco-animate">
-					<div class="img" style="background-image: url('static/images/makeup.jpg');"></div>
+					<img src="{% static 'images/makeup-1.jpg' %}" width="240" height="240">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-candle"></span></div>
 					<div class="text mt-3">
 						<h3>makeup</h3>
@@ -53,9 +53,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3">
+			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="services text-center ftco-animate">
-					<div class="img" style="background-image: url('static/images/makeup_4.jpg');"></div>
+					<img src="{% static 'images/facial care.jpg' %}" width="240" height="240">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-beauty-treatment"></span></div>
 					<div class="text mt-3">
 						<h3>Skin Care</h3>
@@ -63,9 +63,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3">
+			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="services text-center ftco-animate">
-					<div class="img" style="background-image: url('static/images/spa-2.jpg');"></div>
+					<img src="{% static 'images/spa-4.jpg' %}" width="240" height="240">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-relax"></span></div>
 					<div class="text mt-3">
 						<h3>Body Massages</h3>
@@ -85,30 +85,19 @@
             	<h2 class="mb-1">See the latest photos</h2>
           	</div>
         </div>
-    	<div class="row">
-			<div class="col-md-3 ftco-animate">
-				<a href="statimages/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/spa-3.jpg');">
-					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
-				</a>
+        <div class="row">
+			<div class="col-md-4 col-x5-6">
+				<img src="{% static 'images/spa-1.jpg' %}" width="240" height="240">
 			</div>
-			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/spa-4.jpg');">
-					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
-				</a>
+			<div class="col-md-4 col-x5-6">
+				<img src="{% static 'makeup.jpg' %}" width="240" height="240">
 			</div>
-			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/hair_2.jpg');">
-					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
-				</a>
+			<div class="col-md-4 col-x5-6">
+				<img src="{% static 'makeup-creative.jpg' %}" width="240" height="240">
 			</div>
-			<div class="col-md-3 ftco-animate">
-				<a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url('static/images/makeup-creative.jpg');">
-					<div class="icon mb-4 d-flex align-items-center justify-content-center"><span class="icon-instagram"></span></div>
-				</a>
-			</div>
-        </div>
+		</div>
     </div>
 </section>
-	</body>
+</body>
 
 {% endblock %}
