--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -36,10 +36,10 @@
 				<img src="{% static 'images/spa-1.jpg' %}" width="240" height="240">
 			</div>
 			<div class="col-md-4 col-x5-6">
-				<img src="{% static 'makeup.jpg' %}" width="240" height="240">
+				<img src="{% static 'images/makeup.jpg' %}" width="240" height="240">
 			</div>
 			<div class="col-md-4 col-x5-6">
-				<img src="{% static 'makeup-creative.jpg' %}" width="240" height="240">
+				<img src="{% static 'images/makeup-creative.jpg' %}" width="240" height="240">
 			</div>
 		</div>
     </div>
