--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -3,12 +3,13 @@
 {% block content %}
 <br>
 <br>
-<body class="hero-wrap js-fullheight" style="background-image: url('static/images/gallery-4.jpg');" data-stellar-background-ratio="0.5">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<body>
 <section >
 	<div class="container">
-		<div class="col-md-6 ">
+		<div class="col-md-8">
           	<div class="image">
-				<img src="{% static 'images/makeup_3.jpg' %}" width="280" height="420"
+				<img src="{% static 'images/makeup_3.jpg' %}" width="280" height="360"
 				style="float: right; 
 				margin-left: 10px;
 				margin-top: 10px; ">
@@ -46,4 +47,3 @@
 </section>
 </body>
 {% endblock %}
-					<img src="{% static 'images/spa-1.jpg' %}" class="img-responsive">
