--- a/mysite/templates/mysite/services.html
+++ b/mysite/templates/mysite/services.html
@@ -2,18 +2,14 @@
 {% load static %}
 {% include 'mysite/navbar.html' %}
 {% block content %}
-<style>
-body {
-  background-image: url('static/images/gallery-6.jpg');
-}
-</style>
-<body class="hero-wrap js-fullheight" style="background-image: url('static/images/gallery-4.jpg');" data-stellar-background-ratio="0.5">
-	<section class="ftco-section ftco-no-pt ftco-no-pb">
+<br>
+<body>
+<section class="ftco-section ftco-no-pt ftco-no-pb">
 	<div class="container">
 		<div class="row no-gutters">
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="hair-care text-center px-2 px-lg-5">
-					<img src="{% static 'images/hair care.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/hair care.jpg' %}" width="180" height="180">
 					<div class="text mt-4">
 						<h3 class="mb-4">Hair care</h3>
 						<p class="mb-5">let us braid, color and style your hair to your liking</p>
@@ -23,7 +19,7 @@ body {
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="Nail-care active text-center px-2 px-lg-5">
-					<img src="{% static 'images/mani_1.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/mani_1.jpg' %}" width="180" height="180">
 					<div class="text mt-4">
 						<h3 class="mb-4">Nail care</h3>
 						<p class="mb-5">Acrylic Nails, Spa Pedicure, Manicure, Polish, U.V & Powder Gel and Dip Powder</p>
@@ -33,7 +29,7 @@ body {
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="waxing text-center px-2 px-lg-5">
-					<img src="{% static 'images/waxing2.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/waxing2.jpg' %}" width="180" height="180">
 					<div class="text mt-4">
 						<h3 class="mb-4">waxing</h3>
 						<p class="mb-5">Brazilian, legs, arms, eyebrows, under arms, Bikini, Back Wax and full face</p>
@@ -50,7 +46,7 @@ body {
     	<div class="row">
     		<div class="col-md-4 d-flex align-items-stretch">
 				<div class="makeup text-center ftco-animate">
-					<img src="{% static 'images/makeup-1.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/makeup-1.jpg' %}" width="180" height="180">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-candle"></span></div>
 					<div class="text mt-3">
 						<h3>makeup</h3>
@@ -60,7 +56,7 @@ body {
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="services text-center ftco-animate">
-					<img src="{% static 'images/facial care.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/facial care.jpg' %}" width="180" height="180">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-beauty-treatment"></span></div>
 					<div class="text mt-3">
 						<h3>Skin Care</h3>
@@ -70,7 +66,7 @@ body {
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="services text-center ftco-animate">
-					<img src="{% static 'images/spa-4.jpg' %}" width="240" height="240">
+					<img src="{% static 'images/spa-4.jpg' %}" width="180" height="180">
 					<div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-relax"></span></div>
 					<div class="text mt-3">
 						<h3>Body Massages</h3>
