--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -35,7 +35,8 @@
 	            </div>
 						</div>
 					</div>
-					<div class="col-md-1"></div>
+					<div class="col-md-1">
+					</div>
           <div class="col-md-6 ftco-animate">
             <form action="#" class="contact-form">
             	<div class="row">
@@ -63,13 +64,6 @@
           </div>
         </div>
       </div>
-    </section>
-
-
-
- 
-    
-  </body>
-</html>
+</section>
 	
 {% endblock %}
