--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,8 @@
-<style>
-	body{
-		background-color: #AAB7B8;
-	}
-</style>
+body{
+	background-color: aliceblue;
+}
+
+.submit-btn{
+	background-color: ;
+}
+
