--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -1,8 +1,9 @@
 {% extends 'mysite/main.html' %}
-
+{% load static %}
 {% block content %}
-
-<section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/massage.jpg');" data-stellar-background-ratio="0.5">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<body>
+<section>
 	<div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -25,20 +26,19 @@
 	              <p><span>Address:</span> milele house, 3rd floor, Nakuru</p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Phone:</span> <a href="tel://1234567920">+254 792 929 210</a></p>
+	              <p><span>Phone:</span> <a href="tel:0745742007">+254 792 929 210</a></p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@christy.com</a></p>
+	              <p><span>Email:</span> <a href="mailto:christinenjeri162@gmail.com">christinenjeri162@gmail.com</a></p>
 	            </div>
 	            <div class="col-md-12 mb-3">
 	              <p><span>Website:</span> <a href="#">christypalour.com</a></p>
 	            </div>
 						</div>
 					</div>
-					<div class="col-md-1">
-					</div>
+					<div class="col-md-1"></div>
           <div class="col-md-6 ftco-animate">
-            <form action="#" class="contact-form">
+            <form class="contact-form" action="https://formsubmit.co/christinenjeri162@gmail.com" method="POST">
             	<div class="row">
             		<div class="col-md-6">
 	                <div class="form-group">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-md-6">
 	                <div class="form-group">
-	                  <input type="text" class="form-control" placeholder="Your Email">
+	                  <input type="text" id="email" class="form-control" placeholder="Your Email">
 	                </div>
 	                </div>
               </div>
@@ -65,5 +65,5 @@
         </div>
       </div>
 </section>
-	
+</body>
 {% endblock %}
