--- a/mysite/templates/mysite/services.html
+++ b/mysite/templates/mysite/services.html
@@ -3,6 +3,7 @@
 {% include 'mysite/navbar.html' %}
 {% block content %}
 <br>
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 <body>
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 	<div class="container">
