--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -23,7 +23,7 @@
 	              <h2 class="h4">Contact Information</h2>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Address:</span> milele house, 3rd floor, Nakuru</p>
+	              <p><span>Address:</span> Milele house, 3rd floor, Nakuru</p>
 	            </div>
 	            <div class="col-md-12 mb-3">
 	              <p><span>Phone:</span> <a href="tel:0745742007">+254 792 929 210</a></p>
