--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -26,10 +26,10 @@
 	              <p><span>Address:</span> Milele house, 3rd floor, Nakuru</p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Phone:</span> <a href="tel:0745742007">+254 792 929 210</a></p>
+	              <p><span>Phone:</span> <a href="tel:0745742007">+254 745 742 007</a></p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Email:</span> <a href="mailto:christinenjeri162@gmail.com">christinenjeri162@gmail.com</a></p>
+	              <p><span>Email:</span> <a href="mailto:christinenjeri162@gmail.com">christypinfo@gmail.com</a></p>
 	            </div>
 	            <div class="col-md-12 mb-3">
 	              <p><span>Website:</span> <a href="#">christypalour.com</a></p>
@@ -38,7 +38,8 @@
 					</div>
 					<div class="col-md-1"></div>
           <div class="col-md-6 ftco-animate">
-            <form class="contact-form" action="https://formsubmit.co/christinenjeri162@gmail.com" method="POST">
+            <form class="contact-form" method="POST">
+            	{% csrf_token %}
             	<div class="row">
             		<div class="col-md-6">
 	                <div class="form-group">
