--- a/mysite/templates/mysite/main.html
+++ b/mysite/templates/mysite/main.html
@@ -24,8 +24,8 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text"><b>visit us at milele house, 3rd floor, Nakuru</b></span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><span class="text"><b>+254 792 929 210</b></span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><b>christys@gmail.com</b></span></a></li>
+                  <li><a href="#"><span class="icon icon-phone"></span><span class="text"><b>+254 745 742 007</b></span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><b>christypinfo@gmail.com</b></span></a></li>
                 </ul>
               </div>
             </div>
